--- a/package.json
+++ b/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^2.9.4",
+    "install": "^0.13.0",
+    "leaflet": "^1.7.1",
+    "npm": "^7.5.3",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.3",
+    "react-sticky-el": "^2.0.5",
+    "use-screen-size": "^1.1.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
