--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0",
     "react-scripts": "4.0.3",
     "react-sticky-el": "^2.0.5",
+    "react-switch": "^6.0.0",
     "use-screen-size": "^1.1.0",
     "web-vitals": "^1.1.0"
   },
